--- a/web/css/site.css
+++ b/web/css/site.css
@@ -11,8 +11,8 @@
 html,
 body {
     height: 100%;
-    font-family: "calibri";
-    font-size: 16px;
+    font-family: "arial";
+    font-size: 20px;
 }
 
 body.site.index {
