--- a/web/css/site.css
+++ b/web/css/site.css
@@ -226,3 +226,28 @@ a.desc:after {
     /* text-decoration: none; */
     color: #fff;
 }
+
+.image-cropper {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    border: solid 2px #ffffff;
+
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 4px 3px 0px 2px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 4px 3px 0px 2px rgba(0,0,0,0);
+}
+.profile-pic {
+  display: inline;
+  margin: 0 auto;
+  margin-left: -30%;
+  margin-top: -1%;
+  height: 100%;
+  width: auto;
+}
+
+.team-name {
+    float: left;
+    margin-right: 5px;
+}
