--- a/web/css/site.css
+++ b/web/css/site.css
@@ -251,3 +251,48 @@ a.desc:after {
     float: left;
     margin-right: 5px;
 }
+
+.qoute{
+    margin-top: 100px;
+}
+.bg-img{
+    background: url('../images/cup.png') no-repeat fixed top center;
+    background-size: cover;
+    width: 30%;
+    top: -100px;
+}
+
+.large {
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+    border: solid 5px #fefefefe;
+    /* float: left; */
+}
+.plarge {
+    margin-left: 0;
+    margin-top: 0;
+}
+.img-left {
+    margin-left: -150px;
+}
+.comment-layout{
+    margin: auto;
+    margin-top: 50px;
+}
+.qoute h5{
+    font-size: 32px;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.logo{
+    height: 150px;
+    width: 150px;
+}
+.logo-wc{
+    border-radius: 100%;
+    margin-left: -40px;
+}
+.join-skype .wrapper{
+    margin-top: 60px;
+}
