--- a/web/css/site.css
+++ b/web/css/site.css
@@ -296,3 +296,181 @@ a.desc:after {
 .join-skype .wrapper{
     margin-top: 60px;
 }
+.err-title{
+    text-align: center;
+    font-family: 'BebasNeueRegular';
+    font-size: 50px;
+    color: #333;
+    /* box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px; */
+    /* text-shadow: 0 2px 2px #dfdfdf, -2px 5px 1px #b8b8b8, -4px 8px 0px #979797, -6px 11px 0px #747474, -8px 14px 0px #565656, -10px 17px 0px #343434, -12px 20px 0px #171717, -14px 23px 0px #000; */
+    /* text-shadow: 3px 3px 20px #222, -2px 1px 30px #222; */
+    /* text-shadow: 4px 4px 0px #000, -4px 0 0px #000, 7px 4px 0 #fff; */
+    /* text-shadow: 20px 10px 0px #f9d82c, -15px -6px 0px #22a5f1; */
+    text-shadow: -1px -1px 3px #fff, 2px 2px 4px #fff;
+}
+
+/**/
+@import url("https://fonts.googleapis.com/css?family=Dosis:300,400,700,800");
+
+/** Styles for the 403 Page **/
+
+.particle-error,
+.permission_denied,
+#particles-js {
+  width: 100%;
+  height: 100%;
+  margin: 0px !important;
+}
+
+#particles-js {
+  position: fixed !important;
+  opacity: 0.23;
+}
+
+.permission_denied {
+  background: #222222 !important;
+}
+
+.permission_denied a {
+  text-decoration: none;
+}
+
+.denied__wrapper {
+  max-width: 500px;
+  width: 100%;
+  height: 390px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 8vh;
+}
+
+.permission_denied h1 {
+  text-align: center;
+  color: #222222;
+  /* font-family: "Dosis", sans-serif; */
+  /* font-size: 100px; */
+  margin-bottom: 0px;
+  /* font-weight: 800; */
+}
+
+.permission_denied h3 {
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
+  line-height: 23px;
+  max-width: 500px;
+  margin: 0px auto 30px auto;
+  font-family: "Dosis", sans-serif;
+  font-weight: 400;
+}
+
+.permission_denied h3 span {
+  position: relative;
+  width: 65px;
+  display: inline-block;
+}
+
+.permission_denied h3 span:after {
+  content: "";
+  border-bottom: 3px solid #ffbb39;
+  position: absolute;
+  left: 0;
+  top: 43%;
+  width: 100%;
+}
+
+.denied__link {
+  background: none;
+  color: #fff;
+  padding: 12px 0px 10px 0px;
+  border: 1px solid #fff;
+  outline: none;
+  border-radius: 7px;
+  width: 150px;
+  font-size: 15px;
+  text-align: center;
+  margin: 0 auto;
+  vertical-align: middle;
+  display: block;
+  margin-bottom: 40px;
+  margin-top: 0px;
+  font-family: "Dosis", sans-serif;
+  font-weight: 400;
+}
+
+.denied__link:hover {
+  color: #ffbb39;
+  border-color: #ffbb39;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.permission_denied .stars {
+  animation: sparkle 1.6s infinite ease-in-out alternate;
+}
+
+@keyframes sparkle {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
+  }
+}
+
+#astronaut {
+  width: 43px;
+  position: absolute;
+  right: 20px;
+  top: 210px;
+  animation: spin 4.5s infinite linear;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+@media (max-width: 600px) {
+  .permission_denied h1 {
+    font-size: 75px;
+  }
+  .permission_denied h3 {
+    font-size: 16px;
+    width: 200px;
+    margin: 0 auto;
+    line-height: 23px;
+  }
+  .permission_denied h3 span {
+    width: 60px;
+  }
+  #astronaut {
+    width: 35px;
+    right: 40px;
+    top: 170px;
+  }
+}
+
+.saturn,
+.saturn-2,
+.hover {
+  animation: hover 2s infinite ease-in-out alternate;
+}
+
+@keyframes hover {
+  0% {
+    transform: translateY(3px);
+  }
+  100% {
+    transform: translateY(-3px);
+  }
+}
+
+.site.error .wrap{
+    background-color: #222222;
+}
