--- a/web/css/site.css
+++ b/web/css/site.css
@@ -474,3 +474,20 @@ a.desc:after {
 .site.error .wrap{
     background-color: #222222;
 }
+
+.bg-shadow{
+  background-color: #0000004f;
+}
+.modal-cus{
+  display: none;
+  overflow: auto;
+  overflow-y: scroll;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+}
