--- a/web/css/site.css
+++ b/web/css/site.css
@@ -324,7 +324,8 @@ a.desc:after {
 
 #particles-js {
   position: fixed !important;
-  opacity: 0.23;
+  opacity: 0.8;
+  max-width: 1570px;
 }
 
 .permission_denied {
@@ -349,7 +350,7 @@ a.desc:after {
   text-align: center;
   color: #222222;
   /* font-family: "Dosis", sans-serif; */
-  /* font-size: 100px; */
+  font-size: 100px;
   margin-bottom: 0px;
   /* font-weight: 800; */
 }
