--- a/web/css/site.css
+++ b/web/css/site.css
@@ -232,8 +232,8 @@ a.desc:after {
     height: 30px;
     position: relative;
     overflow: hidden;
-    border-radius: 50%;
-    border: solid 2px #ffffff;
+    border-radius: 5px;
+    border: solid 0px #ffffff;
 
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 4px 3px 0px 2px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 4px 3px 0px 2px rgba(0,0,0,0);
@@ -241,8 +241,8 @@ a.desc:after {
 .profile-pic {
   display: inline;
   margin: 0 auto;
-  margin-left: -30%;
-  margin-top: -1%;
+  /* margin-left: -30%; */
+  /* margin-top: -1%; */
   height: 100%;
   width: auto;
 }
@@ -267,6 +267,7 @@ a.desc:after {
     height: 400px;
     margin: 0 auto;
     border: solid 5px #fefefefe;
+    border-radius: 50%;
     /* float: left; */
 }
 .plarge {
