--- a/web/css/site.css
+++ b/web/css/site.css
@@ -234,7 +234,7 @@ a.desc:after {
     overflow: hidden;
     border-radius: 5px;
     border: solid 0px #ffffff;
-
+    background-color: #fff;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 4px 3px 0px 2px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 4px 3px 0px 2px rgba(0,0,0,0);
 }
