--- a/web/css/site.css
+++ b/web/css/site.css
@@ -177,7 +177,7 @@ a.desc:after {
 }
 
 #brand-logo {
-    background: url(../logo-w.png) no-repeat;
+    background: url(../logo.png) no-repeat;
     width: 30px;
     height: 30px;
     float: left;
