--- a/web/css/site.css
+++ b/web/css/site.css
@@ -187,6 +187,12 @@ a.desc:after {
     margin-top: -7px;
 }
 
+.qr-code {
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+}
+
 .app-name {
     color: #f9d82c;
 }
@@ -263,8 +269,8 @@ a.desc:after {
 }
 
 .large {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     margin: 0 auto;
     border: solid 5px #fefefefe;
     border-radius: 50%;
@@ -505,8 +511,11 @@ td:has(.btn ){
 }
 
 .wrap-table > tbody > tr > td{
-  text-overflow: clip;
-  overflow: auto;
+  /* text-overflow: clip; */
+  /* overflow: auto; */
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
 }
 
 .btn-hide{
@@ -596,4 +605,13 @@ tr:has(.btn-show){
   min-width: 10px;
   vertical-align: middle;
   border-radius: 3px;
+}
+
+ul, ol{
+  padding-left: 15px;
+  list-style-type: disclosure-closed;
+}
+
+ul ul {
+  list-style-type: circle;
 }
