--- a/web/css/metro-bootstrap.css
+++ b/web/css/metro-bootstrap.css
@@ -1449,7 +1449,7 @@ th {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  /* text-align: center; */
+  text-align: center;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
