--- a/web/css/metro-bootstrap.css
+++ b/web/css/metro-bootstrap.css
@@ -2035,6 +2035,7 @@ select[multiple].input-lg {
   font-size: 14px;
   line-height: 1.428571429;
   /* border-radius: 0px; */
+  border-radius: 5px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
